Bug 405424 - "Updates for Linux/ia64" [p=armin76@gentoo.org (Raúl Porcel) r=bsmedberg a1.9=beltzner]